test/runnable/forced-by-val.crow
import
	crow/io/print: out, print

main nat^(_ string[]) summon, trusted
	out print "{size-of@t}"
	()

t record by-val
	x t*
	y nat
