test/compile-errors/modifier-conflict.crow
import
	crow/io/print: out, print

main nat^(_ string[]) summon
	out print "hello, world!"
	()

dm extern data mut

ms record mut shared

sfs record shared force-shared

bvbr record by-val by-ref
